Fix sticky-nav jumpy logo issue.

--- a/nanco-portfolio/src/components/navigation/navigation.css
+++ b/nanco-portfolio/src/components/navigation/navigation.css
@@ -7,10 +7,9 @@ header + div {
     display: flex;
     justify-content: space-between;
     padding: 10px 15%;
-    /* border-bottom: 1px solid var(--primary-color); */
     box-shadow: rgba(0, 0, 0, 0.25) 1px 3px 5px;
     margin-bottom: 4px;
-    transition: 0.4s;
+    transition: 0.1s; /* exBug: the logo jumps with longer times!!! */
 }
 
 /* ------------------ Sticky Navbar ------------------ */
